feat(CU-2dtebpm): add endpoint create folder
