# docs/_build/openapi.yaml
@@ -696,6 +696,45 @@ paths:
           $ref: '#/components/responses/404'
         '422':
           $ref: '#/components/responses/422'
+  /folders:
+    post:
+      tags:
+        - Documents
+      summary: Create - Folder
+      operationId: createDocumentFolder
+      description: create a folder in the system
+      requestBody:
+        description: Request in format json format
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Folder'
+      responses:
+        '200':
+          description: Basic structure of the response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    $ref: '#/components/schemas/Document'
+                  message:
+                    type: string
+                    example: Ok
+                  success:
+                    type: boolean
+                    example: true
+        '400':
+          $ref: '#/components/responses/400'
+        '401':
+          $ref: '#/components/responses/401'
+        '403':
+          $ref: '#/components/responses/403'
+        '404':
+          $ref: '#/components/responses/404'
+        '422':
+          $ref: '#/components/responses/422'
 components:
   schemas:
     Login:
@@ -1057,6 +1096,18 @@ components:
               example: '2020-01-01'
             type:
               $ref: '#/components/schemas/DocumentType'
+    Folder:
+      type: object
+      properties:
+        name:
+          type: string
+          example: new-folder
+        parent_id:
+          type: integer
+          example: 1
+          nullable: true
+      required:
+        - name
   parameters:
     userId:
       name: user_id
